--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage":"https://tasinali862-dotcom.github.io/reactprodig",
   "name": "deploy-react",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
