--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+   "homepage":"https://tasinali862-dotcom.github.io/reactprodig",
   "name": "deploy-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite", 
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
